<resources>
    <string name="app_name">railway</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="userId">User Id</string>
    <string name="user_id">User Id</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="telephone">"Telephone"</string>
    <string name="country">"Country"</string>
    <string name="submit">"Submit"</string>
    <string name="aadhar_number">Aadhar Number</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="logout">Logout</string>
    <string name="newj">New Journey</string>
    <string name="bookedj">Booked Journey</string>
    <string name="Null">Null</string>
    <string name="traindate">Train Date</string>
    <string name="trainname">Train Name</string>
    <string name="trainno">Train Number</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="pnrno">PNR NO</string>
    <string name="seatclass">"Class"</string>
    <string name="age">Age</string>
    <string name="to">To</string>
    <string name="afrom">From</string>
    <string name="date">Date</string>
    <string name="ac">AC(Seats/Fare)</string>
    <string name="sitting">Sitter(Seats/Fare)</string>
    <string name="sleeping">Sleeping(Seats/Fare)</string>
    <string name="book">Book</string>

</resources>
