<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/firstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="96dp"
        android:layout_marginRight="96dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="96dp"
        android:layout_marginRight="96dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/userIdReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="96dp"
        android:layout_marginRight="96dp"
        android:ems="10"
        android:hint="@string/user_id"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:autofillHints="" />

    <EditText
        android:id="@+id/aadharNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="96dp"
        android:layout_marginRight="96dp"
        android:ems="10"
        android:hint="@string/aadhar_number"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/dob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="96dp"
        android:layout_marginRight="96dp"
        android:ems="10"
        android:hint="@string/date_of_birth"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aadharNo"
        android:autofillHints="" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="96dp"
        android:layout_marginRight="96dp"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dob"
        android:autofillHints="" />

    <EditText
        android:id="@+id/passwordReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="96dp"
        android:layout_marginRight="96dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userIdReg" />

    <EditText
        android:id="@+id/telephone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="96dp"
        android:layout_marginRight="96dp"
        android:ems="10"
        android:hint="@string/telephone"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordReg"
        android:autofillHints="" />

    <EditText
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="96dp"
        android:layout_marginRight="96dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/country"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/telephone" />

    <Button
        android:id="@+id/signupbutton"
        android:layout_width="157dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="127dp"
        android:layout_marginRight="127dp"
        android:layout_marginBottom="84dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/country" />

</androidx.constraintlayout.widget.ConstraintLayout>
