<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="304dp"
        android:layout_marginEnd="96dp"
        android:layout_marginRight="96dp"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/userId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="244dp"
        android:layout_marginEnd="96dp"
        android:layout_marginRight="96dp"
        android:ems="10"
        android:hint="@string/user_id"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="140dp"
        android:layout_height="44dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="136dp"
        android:layout_marginRight="136dp"
        android:layout_marginBottom="300dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/registerbutton"
        android:layout_width="141dp"
        android:layout_height="49dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="29dp"
        android:layout_marginRight="29dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
