<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/to"
        android:layout_width="120dp"
        android:layout_height="43dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/to"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/from"
        android:layout_width="120dp"
        android:layout_height="43dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/afrom"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/date"
        android:layout_width="120dp"
        android:layout_height="43dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:ems="10"
        android:hint="@string/date"
        android:inputType="date"
        app:layout_constraintEnd_toStartOf="@+id/from"
        app:layout_constraintStart_toEndOf="@+id/to"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <Button
        android:id="@+id/search"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="145dp"
        android:layout_marginLeft="145dp"
        android:layout_marginTop="10dp"
        android:text="@android:string/search_go"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="587dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search">

        <ListView
            android:id="@+id/listsearch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin" />
    </LinearLayout>

    <TextView
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="27dp"
        android:text="@string/Null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/to" />
</androidx.constraintlayout.widget.ConstraintLayout>
